remove all sections except splash page

--- a/resume.html
+++ b/resume.html
@@ -116,7 +116,7 @@
                             </div>
                             <ul>
                                 <li>Managed key steps of the sales process from responding to prospect inquiries to securing
-                                    purchase commitments from assigned customers.</li>
+                                    purchase commitments.</li>
                                 <li>Identified opportunities and filled the new business pipeline with existing customer relationships.
                                 </li>
                                 <li>Assisted customers in the material and converting process selection.</li>
@@ -181,7 +181,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- <div class="card-header">
+                        <div class="card-header">
                             <h4>Interests</h4>
                         </div>
                         <div class="card-body">
@@ -196,7 +196,7 @@
                                     <p>Technological improvements in Viet Nam</p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
