--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 </head>
 
 <body class="container-fluid">
-    <div class="pageNav">
+    <!-- <div class="pageNav">
         <nav>
             <ul id="movingNav">
                 <li class="navbar-li" class="special-li">
-                    <a class="navbar-link" href="#about-me">About Me</a>
+                    <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
+                        <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
+                    </a>
                 </li>
                 <li class="navbar-li">
                     <a class="navbar-link" href="#projects">Projects</a>
@@ -31,7 +33,7 @@
                 </li>
             </ul>
         </nav>
-    </div>
+    </div> -->
     <div id="splashscreen">
 
         <div id="layer"></div>
@@ -49,16 +51,24 @@
                 <nav>
                     <ul>
                         <li class="navbar-li" class="special-li">
-                            <a class="navbar-link" href="#about-me">About Me</a>
+                            <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
+                                <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
+                            </a>
                         </li>
                         <li class="navbar-li">
-                            <a class="navbar-link" href="#projects">Projects</a>
+                            <a href="https://github.com/sn31" target="_blank">
+                                <img class="contact" src="img/icons8-github-64.png" alt="github" />
+                            </a>
                         </li>
                         <li class="navbar-li">
-                            <a class="navbar-link" href="#background">Background</a>
+                            <a href="./resume.html">
+                                <img class="contact" src="img/icons8-resume-64.png" alt="resume" />
+                            </a>
                         </li>
                         <li class="navbar-li">
-                            <a class="navbar-link" href="#hobbies">Hobbies</a>
+                            <a href="mailto:skye@dames.es">
+                                <img class="contact" src="img/icons8-new-post-64.png" alt="email" />
+                            </a>
                         </li>
                     </ul>
                 </nav>
@@ -66,7 +76,7 @@
         </div>
     </div>
     </div>
-    <div class="header-container">
+    <!-- <div class="header-container">
         <main>
             <div class="card" id="about-me">
 
@@ -328,7 +338,7 @@
             <span>Copyright © 2018
                 <a href="https://skye.dames.es">Skye Nguyen</a>. All Rights Reserved.</span>
         </footer>
-    </div>
+    </div> -->
 </body>
 
 </html>
