--- a/index.html
+++ b/index.html
@@ -1,344 +1,82 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Skye Nguyen</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link
+      href="css/bootstrap.css"
+      rel="stylesheet"
+      type="text/css"
+      media="all"
+    />
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Muli|Flamenco|Sofia|Black+Ops+One|Bungee+Shade" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Muli|Flamenco|Sofia|Black+Ops+One|Bungee+Shade"
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/anime.min.js"></script>
     <script src="js/scripts.js"></script>
-</head>
+  </head>
 
-<body class="container-fluid">
-    <!-- <div class="pageNav">
-        <nav>
-            <ul id="movingNav">
-                <li class="navbar-li" class="special-li">
-                    <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
-                        <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
-                    </a>
-                </li>
-                <li class="navbar-li">
-                    <a class="navbar-link" href="#projects">Projects</a>
-                </li>
-                <li class="navbar-li">
-                    <a class="navbar-link" href="#background">Background</a>
-                </li>
-                <li class="navbar-li">
-                    <a class="navbar-link" href="#hobbies">Hobbies</a>
-                </li>
-            </ul>
-        </nav>
-    </div> -->
+  <body class="container-fluid">
     <div id="splashscreen">
-
-        <div id="layer"></div>
-
-        <div id="content">
-            <h1 class="title-splash">Skye Nguyen</h1>
-            <h5 class="ml11">
-                <span class="text-wrapper">
-                    <span class="line"></span>
-                    <span class="letters">Software Engineer</span>
-                </span>
-            </h5>
-            <br>
-            <div id="firstNav">
-                <nav>
-                    <ul>
-                        <li class="navbar-li" class="special-li">
-                            <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
-                                <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
-                            </a>
-                        </li>
-                        <li class="navbar-li">
-                            <a href="https://github.com/sn31" target="_blank">
-                                <img class="contact" src="img/icons8-github-64.png" alt="github" />
-                            </a>
-                        </li>
-                        <li class="navbar-li">
-                            <a href="./resume.html">
-                                <img class="contact" src="img/icons8-resume-64.png" alt="resume" />
-                            </a>
-                        </li>
-                        <li class="navbar-li">
-                            <a href="mailto:skye@dames.es">
-                                <img class="contact" src="img/icons8-new-post-64.png" alt="email" />
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+      <div id="layer"></div>
+      <div id="content">
+        <h1 class="title-splash">Skye Nguyen</h1>
+        <h5 class="ml11">
+          <span class="text-wrapper">
+            <span class="letters">Software Engineer</span>
+          </span>
+        </h5>
+        <br />
+        <div id="firstNav">
+          <nav>
+            <ul>
+              <li class="navbar-li" class="special-li">
+                <a
+                  href="https://www.linkedin.com/in/skyenguyen31/"
+                  target="_blank"
+                >
+                  <img
+                    class="contact"
+                    src="img/icons8-linkedin-64.png"
+                    alt="linkedin"
+                  />
+                </a>
+              </li>
+              <li class="navbar-li">
+                <a href="https://github.com/sn31" target="_blank">
+                  <img
+                    class="contact"
+                    src="img/icons8-github-64.png"
+                    alt="github"
+                  />
+                </a>
+              </li>
+              <li class="navbar-li">
+                <a href="./resume.html">
+                  <img
+                    class="contact"
+                    src="img/icons8-resume-64.png"
+                    alt="resume"
+                  />
+                </a>
+              </li>
+              <li class="navbar-li">
+                <a href="mailto:skye@dames.es">
+                  <img
+                    class="contact"
+                    src="img/icons8-new-post-64.png"
+                    alt="email"
+                  />
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
+      </div>
     </div>
-    </div>
-    <!-- <div class="header-container">
-        <main>
-            <div class="card" id="about-me">
-
-                <h3 class="card-title" id="aboutMeTag">About Me</h3>
-
-
-                <div class="card-body">
-                    <img src="img/profile.jpg" alt="profile picture" width=30% id="profile" />
-                    <div id="about-me-float">
-                        <p> I am originally from Viet Nam and have been living in the United States for about seven years now.
-                            I spent five of these years living and studying in northern Indiana before moving to Seattle
-                            last summer. I consider myself a
-                            <em>diversity promotor</em>, a reliable teammate, and a
-                            <strong>creative problem solver</strong>.
-                        </p>
-                        <p>I am currently attending Epicodus C# and React track full-time, which will conclude in February,
-                            2019.
-                        </p>
-
-                        <ol>
-                            <span>Short-term Goals</span>
-                            <li>Improve my programming skills</li>
-                            <li>Explore and apply programming best practices</li>
-                            <li>Establish meaningful relationships with people of common interests</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-            <div class="card" id="projects">
-
-                <h3 class="card-title">Projects</h3>
-
-                <div class="card-body">
-                    <div class="row title-row">
-                        <div class="col-md-3">
-                            <h6>Title</h6>
-                        </div>
-                        <div class="col-md-5">
-                            <h6>Description</h6>
-                        </div>
-                        <div class="col-md-4">
-                            <h6>Link/Demo</h6>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <span>Cospedia</span>
-                        </div>
-                        <div class="col-md-5">
-                            <p>A react-native mobile application that keeps track of your makeup expiration dates. </p>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://github.com/sn31/makeup-journal-code-a-thon">GitHub Repository (On-going project)</a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <span>Magic 8 Ball</span>
-                        </div>
-                        <div class="col-md-5">
-                            <p>A responsive magic-8-ball that gives answer when a question is entered, built using HTML, CSS
-                                and JavaScript.
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://skye.dames.es/magic-8-ball/"> Live Demo</a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <span>Election Result Map</span>
-                        </div>
-                        <div class="col-md-5">
-                            <p>A responsive election map based on the electoral college system, built using HTML, CSS and JavaScript.</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://github.com/sn31/election-map"> GitHub Repository</a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <span>Cat Clock</span>
-                        </div>
-                        <div class="col-md-5">
-                            <p>A responsive clock that changes the main cat picture based on the time of the visit.</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://skye.dames.es/lolcat-clock/">Live Demo</a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <span>Animal Shelter</span>
-                        </div>
-                        <div class="col-md-5">
-                            <p>A static one-page website of a mock animal shelter, built using HTML and CSS.</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://github.com/sn31/animal-shelter/tree/navbar"> GitHub Repository</a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <span>Island Resort</span>
-                        </div>
-                        <div class="col-md-5">
-                            <p>A responsive multi-page website of a mock island resort, built using HTML and CSS.</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://sn31.github.io/island-resort/"> GitHub Pages</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card" id="background">
-
-                <h3 class="card-title">Background</h3>
-
-                <div class="card-body">
-                    <div class="row row-bg">
-                        <div class="col-md-3 col-bg">
-                            <span>Education</span>
-                        </div>
-                        <div class="col-md-9">
-                            Bachelor of Science in Chemical Engineering with a concentration in Polymers.
-                        </div>
-                    </div>
-                    <div class="row row-bg">
-                        <div class="col-md-3 col-bg">
-                            <span>Previous Experience</span>
-                        </div>
-                        <div class="col-md-9">
-                            <ul>
-                                <li class="experience">Sales Engineering - Aerospace - Klinger IGI, Inc</li>
-                                <li class="experience">Process Improvement Engineer - Industrial Construction - Carlisle Construction Materials</li>
-                                <li class="experience">Material Engineer - Oil &amp; Gas - Parker Hannifin</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row row-bg">
-                        <div class="col-md-3 col-bg">
-                            <span>Why I code</span>
-                        </div>
-                        <div class="col-md-9">
-                            <span>I code to solve problems that either myself or other people around me run into.</span>
-                        </div>
-                    </div>
-                    <div class="row row-bg" id="row-bg-last">
-                        <div class="col-md-3 col-bg">
-                            <span>Awards</span>
-                        </div>
-                        <div class="col-md-9">
-                            <ul>
-                                <li>Winner of the A. McLaren White Award for First Prize in the AIChE Design Competition (2017)</li>
-                                <li>Winner of the Inherently Safer Design Award in the AIChE Design Competition (2017)</li>
-                                <li>Winner of the American Chemical Society Rubber Scholarship (2015 &amp; 2016)</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card hobbies-card" id="hobbies">
-                <div class="row">
-                    <div>
-                        <h3 class="card-title">Hobbies</h3>
-
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <span>Dota 2</span>
-                                    <br>
-                                    <img class="hobbies" src="img/dota.jpg" alt="dota 2 wallpaper" width=50%/>
-                                </div>
-                                <div class="col-md-6">
-                                    <span>Makeup</span>
-                                    <br>
-                                    <img class="hobbies" src="img/makeup-unsplash.jpg" alt="makeup bag" width=50%/>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <span>Orangetheory Fitness</span>
-                                    <br>
-                                    <img class="hobbies" src="img/otf-logo.jpg" alt="otf logo" width=50%/>
-                                </div>
-                                <div class="col-md-6">
-                                    <span>Hiking</span>
-                                    <br>
-                                    <img class="hobbies" src="img/hiking.jpg" alt="hiking" width=50%/>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card contact-card" id="contact">
-                <div>
-
-                    <h3 class="card-title">Let's get in touch!</h3>
-
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-2" id="socialMedia">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
-                                            <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <a href="https://github.com/sn31" target="_blank">
-                                            <img class="contact" src="img/icons8-github-64.png" alt="github" />
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <a href="mailto:skye@dames.es">
-                                            <img class="contact" src="img/icons8-new-post-64.png" alt="email" />
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <a href="./resume.html">
-                                            <img class="contact" src="img/icons8-resume-64.png" alt="resume" />
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-10">
-                                <form id="contact">
-                                    <div class="form-group">
-                                        <div class="form-row">
-                                            <div class="col-md-6">
-                                                <input type="text" class="form-control" placeholder="First name">
-                                            </div>
-                                            <div class="col-md-6">
-                                                <input type="text" class="form-control" placeholder="Last name">
-                                            </div>
-                                        </div>
-                                        <br>
-                                        <input type="text" class="form-control" placeholder="Email">
-                                        <br>
-                                        <input type="text" class="form-control" placeholder="Message">
-                                    </div>
-                                    <button class="btn btn-info" id="submit" type="submit">Contact</button>
-                                </form>
-                                <br>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <footer>
-            <span>Copyright © 2018
-                <a href="https://skye.dames.es">Skye Nguyen</a>. All Rights Reserved.</span>
-        </footer>
-    </div> -->
-</body>
-
+  </body>
 </html>
